use table.unpack() because unpack() is deprecated

--- a/.ai-history/2025-01-06_18h-11m-55s_chatgpt_1736176315.md
+++ b/.ai-history/2025-01-06_18h-11m-55s_chatgpt_1736176315.md
@@ -1,3 +1,19 @@
+## Unpack is deprecated
+
+The `unpack()` function used in `./plugin/init.lua` is deprecated in Lua 5.4.
+Tell me what I need to change in the code to make it compatible with Lua 5.4.
+
+
+
+# This is gpt-4o-mini answer (1k in, 1k out)
+
+To make your Neovim plugin compatible with Lua 5.4, you need to replace the deprecated `unpack()` function with the `table.unpack()` function. 
+
+Here are the changes you need to make in your `plugin/init.lua` file:
+
+### Updated `plugin/init.lua`
+
+```lua
 local rktmb_deepseek_complete = require("rktmb-deepseek-complete")
 
 _G.ns_id = vim.api.nvim_create_namespace('rktmb-deepseek-complete')
@@ -18,7 +34,6 @@ _G.suggest_random_sentence = function()
   local lines = vim.api.nvim_buf_get_lines(current_buffer, 0, -1, false)
   local text_before_cursor = table.concat(lines, "\n", 1, current_row - 1) .. string.sub(lines[current_row], 1, current_col)
   local text_after_cursor = string.sub(lines[current_row], current_col + 1) .. "\n" .. table.concat(lines, "\n", current_row + 1)
-
 
   rktmb_deepseek_complete.log("Text before cursor:\n" .. text_before_cursor)
   rktmb_deepseek_complete.log("Text after cursor:\n" .. text_after_cursor)
@@ -87,4 +102,10 @@ vim.api.nvim_create_autocmd("InsertLeave", {
 
 vim.api.nvim_set_keymap("i", "<M-PageDown>", "<Cmd>lua suggest_random_sentence()<CR>", { noremap = true, silent = true })
 vim.api.nvim_set_keymap("i", "<M-PageUp>", "<Cmd>lua accept_suggestion()<CR>", { noremap = true, silent = true })
+```
+
+### Summary of Changes
+- Replace all instances of `unpack()` with `table.unpack()`. 
+
+This change will ensure that your plugin is compatible with Lua 5.4 and avoids using deprecated functions.
 
