--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -53,3 +53,7 @@ The features that already work must continue to work.
 
 Tell me the modifications I need to make to the code in order to achieve what I want.
 
+## Unpack is deprecated
+
+The `unpack()` function used in `./plugin/init.lua` is deprecated in Lua 5.4.
+Tell me what I need to change in the code to make it compatible with Lua 5.4.
