--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -53,3 +53,17 @@ The features that already work must continue to work.
 
 Tell me the modifications I need to make to the code in order to achieve what I want.
 
+## Unpack is deprecated
+
+The `unpack()` function used in `./plugin/init.lua` is deprecated in Lua 5.4.
+I tried to use `table.unpack()` instead, but it breaks the code.
+
+```
+E5108: Error executing lua ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:10: attempt to call field 'unpack' (a nil value)
+stack traceback:
+        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:10: in function 'suggest_random_sentence'
+        [string ":lua"]:1: in main chunk
+```
+
+Tell me what I need to change in the code to make it compatible with Lua 5.4.
+
