--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -36,34 +36,43 @@ Now the current code allows to transform the inline suggestion into regular text
 
 ## Step 4: Get the text before and after the cursor then log it into the logs
 
-Logging is achieved with the following code:
+When in INSERT mode and issue the `<M-PageDown>` key sequence:
+- the cursor goes the end of the current line
+- the content from the beginning of the line to the cursor position is stored in a variable
+- the content from the cursor position to the end of the buffer is stored in a variable
+- the logs confirms the 2 variables has the correct content
+
+That is the desired behavior. Let's continue to implement the remaining steps without breaking the current features.
+
+## Step 5: Query the DeepSeek API to get suggestions from the content of the buffer.
+
+According to the DeepSeek API documentation, the API expects a POST request with the following body:
 
 ```
-local rktmb_deepseek_complete = require("rktmb-deepseek-complete")
-rktmb-deepseek-complete.log("The text to log")
+curl -L -X POST 'https://api.deepseek.com/beta/completions' \
+-H 'Content-Type: application/json' \
+-H 'Accept: application/json' \
+-H 'Authorization: Bearer <TOKEN>' \
+--data-raw '{
+  "model": "deepseek-chat",
+  "prompt": <text_before_cursor>,
+  "echo": false,
+  "frequency_penalty": 0,
+  "logprobs": 0,
+  "max_tokens":131072 ,
+  "presence_penalty": 0,
+  "stop": ["```"],
+  "stream": false,
+  "stream_options": null,
+  "suffix": <text_after_cursor>,
+  "temperature": 1,
+  "top_p": 1
+}'
 ```
 
-When in INSERT mode and issue the `<M-PageDown>` key sequence, I want to add the feature to:
-- put the cursor at the end of the line
-- get the content from the beginning of the line to the cursor position and store it in a variable
-- get the content from the cursor position to the end of the buffer and store it in a variable
-- log the 2 variables into the logs
+I want to use "plenary.nvim" to make the HTTP requests.
+For the moment, I want to log the DeepSeek API response into the logs.
+I want to DeepSeek API request to be made just after `text_before_cursor` and `text_after_cursor` are defined.
 
-The features that already work must continue to work.
-
-Tell me the modifications I need to make to the code in order to achieve what I want.
-
-## Unpack is deprecated
-
-The `unpack()` function used in `./plugin/init.lua` is deprecated in Lua 5.4.
-I tried to use `table.unpack()` instead, but it breaks the code.
-
-```
-E5108: Error executing lua ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:10: attempt to call field 'unpack' (a nil value)
-stack traceback:
-        ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:10: in function 'suggest_random_sentence'
-        [string ":lua"]:1: in main chunk
-```
-
-Tell me what I need to change in the code to make it compatible with Lua 5.4.
+Propose me the modifications to `./plugin/init.lua` to achieve what I want.
 
