--- a/.ai-history/2025-01-06_22h-02m-25s_gemini_1736190145.md
+++ b/.ai-history/2025-01-06_22h-02m-25s_gemini_1736190145.md
@@ -86,3 +86,96 @@ But I want the `choices[].text` to be displayed in the logs.
 
 Propose me the modifications to `./plugin/init.lua` to achieve what I want.
 
+
+
+
+# This is gemini-exp-1206 answer (3k in, 0k out)
+
+```lua
+-- lua/rktmb-deepseek-complete.lua
+-- No changes needed in this file for this step
+
+local M = {}
+
+-- Function to log a message into /tmp/rktmb-deepseek-complete.log
+function M.log(message)
+  local log_file = io.open("/tmp/rktmb-deepseek-complete.log", "a")
+  -- check if log_file is nil
+  if log_file == nil then
+    print("Error opening log file")
+    return
+  end
+  log_file:write(message .. "\n")
+  log_file:close()
+end
+
+function M.generate_sentence()
+  M.log("Entered generate_sentence()")
+  local sentences = { -- ... (rest of the sentences)
+  }
+  return sentences[math.random(#sentences)]
+end
+
+return M
+```
+
+```lua
+-- plugin/init.lua
+local rktmb_deepseek_complete = require("rktmb-deepseek-complete")
+local curl = require('plenary.curl')
+
+_G.ns_id = vim.api.nvim_create_namespace('rktmb-deepseek-complete')
+
+_G.current_extmark_id = nil
+_G.current_suggestion = nil
+
+_G.suggest_random_sentence = function()
+  -- ... (Existing code for random sentence suggestion)
+end
+
+_G.accept_suggestion = function()
+  -- ... (Existing code for accepting suggestion)
+end
+
+local function process_deepseek_response(response)
+  if response.status == 200 then
+    -- Use vim.schedule_wrap to defer the json_decode call
+    vim.schedule_wrap(function()
+      local body = vim.fn.json_decode(response.body)
+
+      -- Log the entire response for debugging
+      rktmb_deepseek_complete.log("Full DeepSeek API response:\n" .. vim.inspect(body))
+
+
+      if body.choices and #body.choices > 0 then
+        for _, choice in pairs(body.choices) do
+          rktmb_deepseek_complete.log(choice.text)
+          rktmb_deepseek_complete.log("===========================")
+        end
+      else
+        rktmb_deepseek_complete.log("DeepSeek API returned no choices.")
+      end
+    end)
+  else
+    -- Log the error
+    rktmb_deepseek_complete.log("DeepSeek API request failed with status: " .. tostring(response.status))
+    rktmb_deepseek_complete.log("Response body:\n" .. response.body)
+  end
+end
+
+
+vim.api.nvim_create_autocmd("InsertLeave", { -- ... })
+
+vim.api.nvim_set_keymap("i", "<M-PageDown>", "<Cmd>lua suggest_random_sentence()<CR>", { noremap = true, silent = true })
+vim.api.nvim_set_keymap("i", "<M-PageUp>", "<Cmd>lua accept_suggestion()<CR>", { noremap = true, silent = true })
+
+
+```
+
+Key changes:
+
+- **`vim.schedule_wrap()`**: The `json_decode` call and subsequent logging are wrapped within `vim.schedule_wrap()`. This ensures that the decoding and logging happen in the main Neovim event loop, *after* the callback has finished, avoiding the error.
+
+- **Logging Improvements**:  The code now logs the *full* decoded response using `vim.inspect(body)`. This is crucial for debugging and understanding the structure of the data returned by DeepSeek.  It also includes a check for the existence and content of `body.choices` to handle cases where the API might not return any choices.  This prevents errors and provides more informative logging.
+
+By using `vim.schedule_wrap`, you ensure that the `vim.fn.json_decode` function, which needs to run in the main thread, is executed after the callback completes. This solves the error you were encountering.  The improved logging gives you more visibility into the API response, making it easier to debug and integrate the suggestions into your plugin.
