change to schedule

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -86,3 +86,10 @@ But I want the `choices[].text` to be displayed in the logs.
 
 Propose me the modifications to `./plugin/init.lua` to achieve what I want.
 
+# Execute vim.schedule_wrap
+
+In `./plugin/init.lua`, I never enter the `vim.schedule_wrap` function `vim.schedule_wrap(function() end)`.
+In the logs, I see the `DeepSeek status: 200` message, but the `DeepSeek in the schedule_wrap` message is never displayed.
+
+Analyze the code and tell me what I need to change to execute the `vim.schedule_wrap` function.
+
