get rid of random

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -46,50 +46,12 @@ That is the desired behavior. Let's continue to implement the remaining steps wi
 
 ## Step 5: Query the DeepSeek API to get suggestions from the content of the buffer.
 
-According to the DeepSeek API documentation, the API expects a POST request with the following body:
+With the current code, the plugin makes a POST request to the DeepSeek API and fetches the API response.
+API response a multi-line string, just like the random sentences are.
 
-```
-curl -L -X POST 'https://api.deepseek.com/chat/completions' \
--H 'Content-Type: application/json' \
--H 'Accept: application/json' \
--H 'Authorization: Bearer <TOKEN>' \
---data-raw '{
-  "messages": [
-    {"content": "You are a helpful assistant", "role": "system"},
-    {"content": "Hi","role": "user"}
-  ],
-  "model": "deepseek-chat",
-  "frequency_penalty": 0,
-  "max_tokens": 2048,
-  "presence_penalty": 0,
-  "response_format": {
-    "type": "text"
-  },
-  "stop": null,
-  "stream": false,
-  "stream_options": null,
-  "temperature": 1,
-  "top_p": 1,
-  "tools": null,
-  "tool_choice": "none",
-  "logprobs": false,
-  "top_logprobs": null
-}'
-```
+## Step 6: Dont use the random sentences anymore, but use the API response
 
-I use "plenary.nvim" to make the HTTP requests.
-For the moment, I log the DeepSeek API response into the logs.
+We reach the final step, where we will use the API response instead of the random sentences.
 
-The problem with the code in `./plugin/init.lua` is that `vim.fn.json_decode` which is used to decode the response body cannot be called inside a callback.
-
-But I want the `choices[].text` to be displayed in the logs.
-
-Propose me the modifications to `./plugin/init.lua` to achieve what I want.
-
-# Execute vim.schedule_wrap
-
-In `./plugin/init.lua`, I never enter the `vim.schedule_wrap` function `vim.schedule_wrap(function() end)`.
-In the logs, I see the `DeepSeek status: 200` message, but the `DeepSeek in the schedule_wrap` message is never displayed.
-
-Analyze the code and tell me what I need to change to execute the `vim.schedule_wrap` function.
+Tell me what do I have to change in the code so that when I press `<M-PageDown>` in INSERT mode, the plugin will use the API response instead of the random sentences.
 
