--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,57 +1,6 @@
-# Propose inline suggestions from DeepSeek API
+# Get the content of the line the cursor is on
 
-The final purpose of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest.
-But we are not going to implement everything in one step, we are to make it step by step.
+In `./plugin/init.lua`, there is a local variable `line_the_cursor_is_on` that is supposed to store the content of the line the cursor is on.
+The problem is that the variable is empty.
 
-- Generate random sentences
-- Make an inline suggestion from a random sentence when triggered.
-- Have the possibility transform the inline suggestion into regular text (accepting the suggestion).
-- Get the content of the current buffer know how to split it into 2 parts: 
-    - the first part is the text from the begining of the buffer to the cursor position
-    - the second part is the text from the cursor position to the end of the buffer
-- Query the DeepSeek API to get suggestions from the content of the buffer.
-- Use the DeepSeek API response to suggest completions (dont use the random sentences anymore)
-
-## Step 1: Generate a random sentence
-
-in `./lua/rktmb-deepseek-complete.lua`, there is a function called `generate_sentence()`.
-That function generates a multiline random sentence.
-This is done.
-
-## Step 2: Make an inline  suggestion from a random sentence when triggered.
-
-When I am in a buffer and in INSERT mode and issue the key sequence `<M-PageDown>`,
-The plugin to place de cursor at the end of the line and then insert an inline suggestion 
-taken from a random sentence (which is multi line) picked from the list of sentences.
-The suggestion appears in grey (#808080).
-The suggestion pushes down the lines below it and does not overlap with the text below.
-If I continue to type after the suggestion is displayed, the suggestion disappears.
-As far as I type, I can trigger the suggestion again and if I continue to type, the suggestion disappears, again and again.
-
-That is the desired behavior.
-
-## Step 3: Have the possibility transform the inline suggestion into regular text (accepting the suggestion).
-
-Now the current code allows to transform the inline suggestion into regular text with the `<M-PageUp>` key sequence.
-
-## Step 4: Get the text before and after the cursor then log it into the logs
-
-When in INSERT mode and issue the `<M-PageDown>` key sequence:
-- the cursor goes the end of the current line
-- the content from the beginning of the line to the cursor position is stored in a variable
-- the content from the cursor position to the end of the buffer is stored in a variable
-- the logs confirms the 2 variables has the correct content
-
-That is the desired behavior. Let's continue to implement the remaining steps without breaking the current features.
-
-## Step 5: Query the DeepSeek API to get suggestions from the content of the buffer.
-
-With the current code, the plugin makes a POST request to the DeepSeek API and fetches the API response.
-API response a multi-line string, just like the random sentences are.
-
-## Step 6: Dont use the random sentences anymore, but use the API response
-
-We reach the final step, where we will use the API response instead of the random sentences.
-
-Tell me what do I have to change in the code so that when I press `<M-PageDown>` in INSERT mode, the plugin will use the API response instead of the random sentences.
-
+Analyze the code and tell me what I need to change to get the content of the line the cursor is on in the variable `line_the_cursor_is_on`.
