--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,6 +1,14 @@
-# Get the content of the line the cursor is on
+# Remove the last line of `text_before_cursor`.
 
-In `./plugin/init.lua`, there is a local variable `line_the_cursor_is_on` that is supposed to store the content of the line the cursor is on.
-The problem is that the variable is empty.
+In `./plugin/init.lua`, there is a local variable `text_before_cursor` that is supposed to store the content of the buffer from the beginning of the buffer to the cursor position.
 
-Analyze the code and tell me what I need to change to get the content of the line the cursor is on in the variable `line_the_cursor_is_on`.
+I need to remove the last line of `text_before_cursor` because the last line is not part of the context.
+Propose me the modifications to `./plugin/init.lua` to achieve what I want.
+
+# Remove the markdown delimiters function
+
+`rktmb_deepseek_complete.remove_markdown_start_code_block_delimiter(suggestion)` and `rktmb_deepseek_complete.remove_markdown_end_code_block_delimiter(suggestion)` are functions that remove the markdown delimiters.
+
+These are separated, and it would be cleaner to merge them into a single function.
+
+Propose me the modifications to `./lua/rktmb-deepseek-complete.lua` to have one `remove_markdown_delimiters` and tell me where I should change the calls.
