--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,14 +1,13 @@
-# Remove the last line of `text_before_cursor`.
+# Use <C-Space> for the inline suggestion
 
-In `./plugin/init.lua`, there is a local variable `text_before_cursor` that is supposed to store the content of the buffer from the beginning of the buffer to the cursor position.
+In `./plugin/init.lua`, I tried to unmap any existing keymaps for `<C-Space>` and then mapped it to the function `suggest_random_sentence`.
 
-I need to remove the last line of `text_before_cursor` because the last line is not part of the context.
-Propose me the modifications to `./plugin/init.lua` to achieve what I want.
+But the problem is:
+- at launch, I get an error "no such mapping"
+- when I press `<C-Space>`, the cursor just goes to the next word
 
-# Remove the markdown delimiters function
+Tell me what do I  have to do to have:
+- `<C-Space>` mapped to `suggest_random_sentence()`
+- `<M-PageDown>` mapped to `accept_suggestion()`
 
-`rktmb_deepseek_complete.remove_markdown_start_code_block_delimiter(suggestion)` and `rktmb_deepseek_complete.remove_markdown_end_code_block_delimiter(suggestion)` are functions that remove the markdown delimiters.
 
-These are separated, and it would be cleaner to merge them into a single function.
-
-Propose me the modifications to `./lua/rktmb-deepseek-complete.lua` to have one `remove_markdown_delimiters` and tell me where I should change the calls.
