--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,13 +1,7 @@
-# Use <C-Space> for the inline suggestion
+# Get the list of opened buffers
 
-In `./plugin/init.lua`, I tried to unmap any existing keymaps for `<C-Space>` and then mapped it to the function `suggest_random_sentence`.
+In `./lua/rktmb-deepseek-complete.lua`, I want a function that lists open buffers, ordered by most recent visited.
 
-But the problem is:
-- at launch, I get an error "no such mapping"
-- when I press `<C-Space>`, the cursor just goes to the next word
-
-Tell me what do I  have to do to have:
-- `<C-Space>` mapped to `suggest_random_sentence()`
-- `<M-PageDown>` mapped to `accept_suggestion()`
+Tell me the code for that.
 
 
