--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -4,4 +4,10 @@ In `./lua/rktmb-deepseek-complete.lua`, I want a function that lists open buffer
 
 Tell me the code for that.
 
+# Invalid option name "changedtick"
 
+In `./lua/rktmb-deepseek-complete.lua`, I want to sort the list of buffers by most recently visited.
+But my code uses `changedtick` to detect the most recently visited buffer.
+Maybe I should use `lastused` instead?
+
+Tell what changes I need to make to `./lua/rktmb-deepseek-complete.lua` to achieve what I want.
